z-index fix on navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,13 +51,13 @@ nav {
     transition: top 0.3s var(--trans-ease);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
 
-    position: fixed;
+    position: absolute;  /* Change from fixed to absolute */
     width: 100%;
-    z-index: 1000;
-    opacity: 1; 
+    z-index: 2;  /* Increase z-index to appear above the image slider */
+    opacity: 1;
     transition: opacity 0.5s;
-    
 }
+
 
 nav ul {
     display: flex;
